# foodgram_fastapi

./: .gitignore  pyproject.toml
alembic/: env.py
backend/: config.py  main.py  pagiation.py  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 2026_01_04_2206-86ac6d21adde_create_bd.py  2026_01_05_1415-c9e4e9633ed0_init.py  2026_01_06_1031-6c23915b75eb_add_user.py  2026_01_06_1055-b9bb26ea7622_add_recipe.py  2026_01_15_1641-7b9a3b27e56e_createdb.py  2026_01_15_1700-5f0fd2e2a873_update_users.py  2026_01_17_1331-84d2c4cc1be9_test_db.py  2026_01_17_1352-68f4489574d4_add_user_avatar_field.py  2026_01_22_1814-e6b58d360e88_test_db.py
backend/api_v1/: __init__.py  auth.py  ingredients.py  recipes.py  subscriptions.py  tags.py  users.py
backend/api_v1/crud/: __init__.py  base.py  ingredients.py  recipes.py  tags.py  users.py
backend/api_v1/dependencies/: __init__.py  auth.py
backend/auth/: utils.py
backend/core/: exeptions.py
backend/core/authentication/: utils.py
backend/core/models/: __init__.py  base.py  db_helper.py  ingredients.py  recipe_ingredients_association.py  recipe_tags_association.py  recipes.py  subscription.py  tags.py  users.py
backend/core/models/mixins/: id_int_pk.py
backend/core/schemas/: __init__.py  auth.py  ingredients.py  recipes.py  tags.py  users.py
backend/utils/: __init__.py  case_converter.py
